# generic-gha

./: .gitignore  ARGOCD_IMPLEMENTATION_PLAN.md  devbox.json
.github/actions/setup-dependencies/: action.yaml
.github/utils/: .release-please-manifest.json  file-filters.yaml
.github/workflows/: build-push.yaml  close-stale-issues-and-prs.yaml  deploy-eks.yaml  destroy-cloud-infra.yaml  hello-world.yaml  release-please.yaml  terraform-cli.yaml  test-oidc.yaml  test.yaml  update-gitops-manifests.yaml
.github/workflows/build-push/: README.md  Taskfile.yaml  push-main.json  tag-node.json  tag-python.json  tag.json  workflow-dispatch-no-version.json  workflow-dispatch.json
.github/workflows/hello-world/: Taskfile.yaml
.github/workflows/setup-dependencies-test/: Taskfile.yaml  setup-dependencies-test.yaml
.github/workflows/test/: README.md  Taskfile.yaml  event-all.json  event-api-golang-migrator.json  event-api-golang.json  event-api-node.json  (+3 more)
services/python/load-generator-python/: CHANGELOG.md  Dockerfile  README.md  Taskfile.yaml  pyproject.toml
services/python/load-generator-python/tests/: test_example.py
terraform/argocd-experiment/: .terraform.lock.hcl  README.md  backend.tf  bootstrap.tf  data.tf  deploy-key.tf  locals.tf  main.tf  outputs.tf  providers.tf
terraform/global/: backend.tf  main.tf  oidc.tf  outputs.tf  providers.tf  variables.tf
terraform/karpenter-experiment/: .terraform.lock.hcl  README.md  main.tf  outputs.tf
terraform/scripts/: bootstrap-state.sh  destroy-production.sh  destroy-staging.sh  run-migrator.sh
utils/: Taskfile.yaml
(+158 files in other folders)
