[tool.poetry]
name = "load-generator-python"
version = "0.2.0"
description = ""
authors = ["sid palas"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
